0.59.0.0/_sources/Reference/NodeReference/GafferScene/SubTree.md.txt
SubTree
=======

A node for extracting a specific branch from a scene.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The processed output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs the input scene unchanged.

in
--

The input scene

root
----

The location to become the new root for the output scene.
All locations below this will be kept, and all others will
be discarded.

includeRoot
-----------

Causes the root location to also be kept in the
output scene, in addition to its children. For
instance, if the scene contains only
/city/street/house and the root is set to /city/street,
then the new scene will by default contain only /house -
but the includeRoot setting will cause it to contain
/street/house instead.